--- a/econ3020.html
+++ b/econ3020.html
@@ -49,36 +49,9 @@
 
         <!--- Page Contents Start --->
         <div class="container">
-            <center><img src="Homepage-Image.jpg" alt="Rachel Pompa"/></center><br/>
-            <a href="Rachel-Pompa-CV.pdf" target="_blank">My CV</a>
-            <p>
-                I am an applied microeconomist with interests in behavioral, health, environmental, and public economics.
-                <br/>
-                My research uses behavioral and experimental methods to examine questions related to public health and environmental issues. 
-                I seek to conduct research on established and emerging issues related to agriculture, public health, and environmental issues to inform both private and public decision making.
-            </p>
-            Education
-            <ul>
-                <li>BA, Economics, Summa Cum Laude, University of Minnesota-Duluth, 2018</li>
-                <li>BS Mathematics, Summa Cum Laude, University of Minnesota- Duluth, 2018</li>
-                <li>MS, Economics, University of Wyoming, 2021</li>
-                <li>PhD, Economics, University of Wyoming, Expected Completion 2024</li>
-            </ul>
-            Awards
-            <ul>
-                <li>2022: Shelby Gerking Graduate Award in Economics, University of Wyoming</li>
-                <li>2018: Academic Excellence in the BA of Economics Award, University of Minnesota - Duluth  </li>
-                <li>2018: LSBE Honors Scholarship, University of Minnesota - Duluth</li>
-                <li>2018: Joseph M. Thell Family Scholarship, University of Minnesota - Duluth </li>
-            </ul>
-            Affiliations
-            <ul>
-                <li>Agricultural and Applied Economics Association (AAEA) Member</li>
-                <li>Association of Environmental and Resource Economists (AERE) Member</li>
-                <li>Omicron Delta Epsilon Member</li>
-                <li>Pi Mu Epsilon Member</li>
-                <li>Phi Theta Kappa Member</li>
-            </ul>
+            <h1>Economics 3020</h1>
+            <a href="3020_Fall_2022_Syllabus.pdf" target="_blank" class="icon">Syllabus</a><br/>
+            <a href="3020_Fall_2022_Schedule.pdf" target="_blank" class="icon">Schedule</a>
         </div>
         <!--- Page Contents End --->
 
