--- a/research.html
+++ b/research.html
@@ -49,35 +49,42 @@
 
         <!--- Page Contents Start --->
         <div class="container">
-            <center><img src="Homepage-Image.jpg" alt="Rachel Pompa"/></center><br/>
-            <a href="Rachel-Pompa-CV.pdf" target="_blank">My CV</a>
-            <p>
-                I am an applied microeconomist with interests in behavioral, health, environmental, and public economics.
-                <br/>
-                My research uses behavioral and experimental methods to examine questions related to public health and environmental issues. 
-                I seek to conduct research on established and emerging issues related to agriculture, public health, and environmental issues to inform both private and public decision making.
-            </p>
-            Education
+            <h1>Research</h1>
+            Publications
             <ul>
-                <li>BA, Economics, Summa Cum Laude, University of Minnesota-Duluth, 2018</li>
-                <li>BS Mathematics, Summa Cum Laude, University of Minnesota- Duluth, 2018</li>
-                <li>MS, Economics, University of Wyoming, 2021</li>
-                <li>PhD, Economics, University of Wyoming, Expected Completion 2024</li>
+                <li>Investing to Both Prevent and Prepare for COVID-XX<br>
+                    Kevin Berry, Richard Horan, David Finnoff, Rachel Pompa, and Peter Daszak 
+                </li>
             </ul>
-            Awards
+            Other Projects<br/>
+            <a href="https://www.uwyo.edu/cegr/research-projects/core-cm-prb.html" target="_blank" >UW School of Energy Resources (CORE-CM)</a>
             <ul>
-                <li>2022: Shelby Gerking Graduate Award in Economics, University of Wyoming</li>
-                <li>2018: Academic Excellence in the BA of Economics Award, University of Minnesota - Duluth  </li>
-                <li>2018: LSBE Honors Scholarship, University of Minnesota - Duluth</li>
-                <li>2018: Joseph M. Thell Family Scholarship, University of Minnesota - Duluth </li>
+                <li>College of Business Center for Business and Economic Analysis (CBEA) supporting the School of Energy Resources to analyze and design an economically feasible Carbon Ore, Rare Earth, and Critical Minerals (CORE-CM) industry in the Greater Green River Basin and Wind River Basin (GGRB-WRB)</li>
+                <li>Contributor to Task 4, Strategies for Infrastructure, Industries, & Business Integration</li>
+                <li>Inventory existing infrastructure, industries, and businesses in the GGRB- WRB</li>
+                <li>Identify areas where stakeholders can cooperate to promote economic growth, job creation, and commercial success for CORE-CM in the region</li>
             </ul>
-            Affiliations
+            Internships<br/>
+            <b>Pathways Intern in Economics - Summer 2022</b><br/>
+            <i>USDA Economic Research Service, Kansas City, MO</i>
             <ul>
-                <li>Agricultural and Applied Economics Association (AAEA) Member</li>
-                <li>Association of Environmental and Resource Economists (AERE) Member</li>
-                <li>Omicron Delta Epsilon Member</li>
-                <li>Pi Mu Epsilon Member</li>
-                <li>Phi Theta Kappa Member</li>
+                <li>Query the USDA National Agricultural Statistics Service Information (NASS) database to create input-output matrices to be used in agricultural CGE and partial equilibrium models</li>
+                <li>Collect open-source data to create social accounting matrices for the U.S. disaggregated by state and income quintiles consistent with the Global Trade Analysis Project (GTAP) database</li>
+                <li>Used GAMS for General Equilibrium Model</li>
+            </ul>
+            <b>Pathways Intern in Economics - Summer 2021</b><br/>
+            <i>USDA Economic Research Service, Kansas City, MO</i>
+            <ul>
+                <li>Conduct a literature review to create and update figures on the ERS Climate Change Webpage</li>
+                <li>Used GAMS for General Equilibrium Modeling</li>
+                <li>Used graphic packages in R including ggplot</li>
+            </ul>
+            Professional Development
+            <ul>
+                <li>Modeling Trade and Investment with WiNDC Short Summer Course Attendee (2022)</li>
+                <li>AgMIP Conference on ‘Making Climate-Smart Agriculture Work’ Attendee (2022)</li>
+                <li>Introduction to Applied General Equilibrium Modeling with the WiNDC Database Short Summer Course Attendee (2021)</li>
+                <li>Agricultural and Applied Economics Association (AAEA) Conference Attendee (2021)</li>
             </ul>
         </div>
         <!--- Page Contents End --->
