--- a/teaching-overview.html
+++ b/teaching-overview.html
@@ -49,36 +49,22 @@
 
         <!--- Page Contents Start --->
         <div class="container">
-            <center><img src="Homepage-Image.jpg" alt="Rachel Pompa"/></center><br/>
-            <a href="Rachel-Pompa-CV.pdf" target="_blank">My CV</a>
+            <h1>Teaching Overview</h1>
+            <h2>Teaching Philosophy</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Modi, eos saepe distinctio iure amet eum repellendus eligendi similique ad dicta! Molestiae doloribus fugiat hic, consequuntur harum incidunt ipsam impedit provident.</p>
+        
+            <h2>Courses Taught</h2>
             <p>
-                I am an applied microeconomist with interests in behavioral, health, environmental, and public economics.
-                <br/>
-                My research uses behavioral and experimental methods to examine questions related to public health and environmental issues. 
-                I seek to conduct research on established and emerging issues related to agriculture, public health, and environmental issues to inform both private and public decision making.
+                <a class="link" href="econ3010.html">ECON 3010 Intermediate Macroeconomics</a><br/>
+                (In-person, Spring 2022, Full semester course, 21 Students)
             </p>
-            Education
-            <ul>
-                <li>BA, Economics, Summa Cum Laude, University of Minnesota-Duluth, 2018</li>
-                <li>BS Mathematics, Summa Cum Laude, University of Minnesota- Duluth, 2018</li>
-                <li>MS, Economics, University of Wyoming, 2021</li>
-                <li>PhD, Economics, University of Wyoming, Expected Completion 2024</li>
-            </ul>
-            Awards
-            <ul>
-                <li>2022: Shelby Gerking Graduate Award in Economics, University of Wyoming</li>
-                <li>2018: Academic Excellence in the BA of Economics Award, University of Minnesota - Duluth  </li>
-                <li>2018: LSBE Honors Scholarship, University of Minnesota - Duluth</li>
-                <li>2018: Joseph M. Thell Family Scholarship, University of Minnesota - Duluth </li>
-            </ul>
-            Affiliations
-            <ul>
-                <li>Agricultural and Applied Economics Association (AAEA) Member</li>
-                <li>Association of Environmental and Resource Economists (AERE) Member</li>
-                <li>Omicron Delta Epsilon Member</li>
-                <li>Pi Mu Epsilon Member</li>
-                <li>Phi Theta Kappa Member</li>
-            </ul>
+            <p>
+                <a class="link" href="econ3020.html">ECON 3020 Intermediate Microeconomics</a><br/>
+                (In-person, Fall 2022, Full semester course)
+            </p>
+
+            <h2>Teaching Technology</h2>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Iusto aliquam perspiciatis accusantium rerum assumenda vel non quod libero esse consectetur incidunt eum aliquid inventore quaerat animi ab quos, corrupti velit!</p>
         </div>
         <!--- Page Contents End --->
 
