--- a/presentations.html
+++ b/presentations.html
@@ -59,7 +59,7 @@
         <!--- Page Contents End --->
 
         <!--- Footer Start --->
-        <footer id="footer">
+        <div class="footer-content">
             <p>
                 All content on this website represents the views of the author, and not necessarily the position of any of the author's field or held positions (i.e., university, jobs, internships, etc.).
             </p>
@@ -98,7 +98,7 @@
                     </a>
                 </li>
             </ul>
-        </footer>
+        </div>
         <!--- Footer End --->
     </div>
 </body>
